[project]
name = "onlimit-data-package"
version = "0.1.0"
description = "Add your description here"
authors = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
]
maintainers = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.29.0",
    "pyjanitor>=0.31.0",
    "seedcase-sprout",
]

[project.urls]
issues = "https://github.com/seedcase-project/onlimit-data-package/issues"
repository = "https://github.com/seedcase-project/onlimit-data-package"

[tool.uv.sources]
seedcase-sprout = { git = "https://github.com/seedcase-project/seedcase-sprout" }

[dependency-groups]
dev = [
    "commitizen>=4.6.2",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]
